<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="top|start"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Textos no topo à esquerda -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Painel Controles "
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:layout_marginBottom="82dp" />

    <!-- Botões com mais espaçamento -->
    <android.widget.Button
        android:id="@+id/btnVisitas"
        android:text="Agenda visita"
        style="@style/ActionButton"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnClientes"
        android:text="@string/clientes"
        style="@style/ActionButton"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnVinhos"
        android:text="@string/vinhos"
        style="@style/ActionButton"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnPedidos"
        android:text="@string/pedidos"
        style="@style/ActionButton"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnMetas"
        android:text="@string/metas_comissoes"
        style="@style/ActionButton"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnSair"
        style="@style/SecondaryButton"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sair"
        android:layout_gravity="center"/>

</LinearLayout>